Sign-in Form - [HTML]

--- a/Form-HTML/assets/styles/form.css
+++ b/Form-HTML/assets/styles/form.css
@@ -59,6 +59,9 @@ ul li a {
   width: 100%;
   padding-inline: 40px;
 }
+.d-grid {
+  display: grid;
+}
 .d-flex {
   display: flex;
 }
@@ -103,11 +106,13 @@ header {
   transition: all 0.3s ease;
   padding: 8px 12px;
   border-radius: 8px;
+  font-weight: 600;
 }
 
 .header-wrap ul li a:hover {
   color: white;
   background-color: rgba(80, 56, 60, 0.8);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 10px;
 }
 
 /* toggle-button */
@@ -167,9 +172,7 @@ header {
   transition: all 0.4s ease;
 }
 .toggle-nav nav ul li a:hover {
-  /* color: rgb(252, 99, 107); */
   color: rgb(80, 56, 60);
-  background-color: transparent;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -211,10 +214,13 @@ header {
 .input-wrap {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.15);
-  padding: 10px 20px;
+  padding: 10px 30px;
   margin-bottom: 20px;
   border-radius: 40px;
-  gap: 14px;
+  gap: 10px;
+}
+.input-wrap i {
+  font-size: 14px;
 }
 /* submit */
 .btn-submit {
@@ -229,9 +235,10 @@ header {
   transition: all 0.3s ease;
 }
 .btn-submit:hover {
+  border: 0;
   background-color: rgba(255, 255, 255, 0.5);
   color: rgb(80, 56, 60);
-  border: 0;
+  box-shadow: 0 4px 6px rgba(252, 99, 107, 0.8);
 }
 .main-content-ul {
   margin-top: 16px;
@@ -240,9 +247,25 @@ header {
 }
 .main-content-ul li a {
   transition: all 0.3s ease;
+  position: relative;
+  padding: 8px 0;
+}
+.main-content-ul li:first-child a::after {
+  content: " ";
+  height: 1px;
+  width: 0;
+  position: absolute;
+  background-color: white;
+  bottom: 0;
+  left: 0;
+  transition: all 0.3s ease;
+}
+.main-content-ul li:first-child a:hover::after {
+  width: 100%;
 }
 .main-content-ul li:first-child a:hover {
   color: rgb(252, 99, 107);
+  border-width: 100%;
 }
 .main-content-ul li:last-child a {
   color: rgba(255, 255, 255, 0.7);
@@ -250,13 +273,79 @@ header {
 .main-content-ul li:last-child a:hover {
   color: rgb(255, 255, 255);
 }
+@media (max-width: 475px) {
+  .content-wrap {
+    margin: 190px auto;
+  }
+}
+@media (max-width: 436px) {
+  .content-wrap {
+    margin: 180px auto;
+  }
+}
 @media (max-width: 375px) {
   /* main content */
   .main-content-ul {
-    text-align: end;
+    text-align: center;
     display: block;
   }
   .main-content-ul li:last-child {
     margin-top: 12px;
+  }
+  .content-wrap {
+    margin: 160px auto;
+  }
+}
+
+/* footer */
+.footer-wrap {
+  justify-content: center;
+  gap: 20px;
+}
+.footer-wrap ul {
+  gap: 20px;
+}
+.footer-wrap ul li a {
+  transition: all 0.3s ease;
+}
+.footer-wrap ul li a:hover {
+  color: rgb(252, 99, 107);
+}
+.footer-wrap ul li {
+  position: relative;
+}
+.footer-wrap ul li::after {
+  content: " ";
+  height: 25px;
+  width: 2px;
+  position: absolute;
+  background-color: white;
+  bottom: -4px;
+  right: -11px;
+}
+.footer-wrap ul li:last-child:after {
+  height: 0px;
+  width: 0px;
+  position: absolute;
+}
+.footer-wrap p {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+@media (max-width: 1024px) {
+  .footer-wrap {
+    /* display: block; */
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-wrap ul {
+    justify-content: center;
+    gap: 20px;
+  }
+  .footer-wrap p {
+    margin-top: 18px;
+  }
+  .footer-wrap ul li::after {
+    height: 40px;
   }
 }
