--- a/Blog-Page/assets/styles/blog-page.css
+++ b/Blog-Page/assets/styles/blog-page.css
@@ -8,6 +8,26 @@
   outline: none;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  border-radius: 10px;
+
+  background: linear-gradient(
+    180deg,
+    hsla(282, 26%, 55%, 1) 0%,
+    hsla(200, 53%, 78%, 1) 100%
+  );
+}
+
 body {
   color: #333;
   background: hsla(282, 26%, 55%, 1);
@@ -191,6 +211,7 @@ header {
 
 /* main content */
 .content-wrap {
+  height: 100dvh;
   justify-content: space-between;
   grid-template-columns: 3.1fr 1fr;
   gap: 20px;
@@ -234,26 +255,30 @@ article time {
 }
 
 aside {
-  max-height: 457px;
+  height: 500px;
+  flex-direction: column;
   overflow: hidden;
   background-color: rgba(171, 210, 229, 0.5);
-  padding: 15px;
+  padding: 8px 16px 16px 16px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 aside h3 {
-  margin-bottom: 15px;
-  color: black;
+  margin-bottom: 10px;
+  color: #000000;
   font-size: 1.5rem;
 }
 
 .aside-scroll {
-  max-height: 380px;
-  /* overflow: hidden; */
+  padding-top: 10px;
+  border-top: 2px solid rgba(0, 0, 0, 0.2);
+  height: 100%;
+  overflow: hidden;
 }
 
 aside ul {
+  height: 100%;
   overflow-y: auto;
   list-style: none;
 }
