Phenomenon Template - [HTML-CSS]

--- a/Phenomenon-Template/assets/styles/css-page.css
+++ b/Phenomenon-Template/assets/styles/css-page.css
@@ -315,6 +315,8 @@ nav ul li a:hover::after {
   cursor: pointer;
   scroll-behavior: smooth;
   overflow-x: auto;
+  user-select: none;
+  white-space: nowrap;
   border-radius: 15px;
   background: linear-gradient(
       to right,
@@ -331,6 +333,7 @@ nav ul li a:hover::after {
   box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
 }
 .tags-wrap span {
+  display: inline-block;
   color: var(--bg-dark);
   padding: 6px 12px;
   font-size: 12px;
