--- a/Phenomenon-Template/assets/styles/css-page.css
+++ b/Phenomenon-Template/assets/styles/css-page.css
@@ -525,7 +525,7 @@ nav ul li a:hover::after {
   align-items: flex-start;
 }
 .card-col h3 {
-  font-size: 34px;
+  font-size: clamp(22px, 5vw, 34px);
 }
 
 .card-col p {
@@ -539,8 +539,8 @@ nav ul li a:hover::after {
   color: var(--text-light);
 }
 .card-col-img {
-  min-height: 230px;
-  width: 230px;
+  min-height: 170px;
+  width: clamp(170px, 10vw, 230px);
   position: relative;
 }
 .card-col-img img {
@@ -548,16 +548,6 @@ nav ul li a:hover::after {
   object-fit: cover;
   width: 100%;
   transition: all 0.4s ease;
-}
-@media (max-width: 375px) {
-  .card-col h3 {
-    font-size: 24px;
-  }
-  .card-col-img {
-    min-height: 170px;
-    width: 170px;
-    position: relative;
-  }
 }
 .card-col-img img:last-child {
   visibility: hidden;
