--- a/Phenomenon-Template/assets/styles/css-page.css
+++ b/Phenomenon-Template/assets/styles/css-page.css
@@ -8,6 +8,7 @@
 }
 :root {
   --bg-dark: rgb(32, 33, 34);
+  --bg-card-border-dark: rgb(64, 66, 66);
   --bg-gray: rgb(235, 235, 235);
   --bg-light: rgb(255, 254, 253);
   --bg-orange: rgb(242, 117, 26);
@@ -84,6 +85,9 @@ section {
 }
 .mt-60 {
   margin-top: 60px;
+}
+.mt-120 {
+  margin-top: 120px;
 }
 .section-wrap {
   margin: 0 auto;
@@ -777,7 +781,230 @@ nav ul li a:hover::after {
 .review-title-wrap .section-title-wrap-span {
   width: 80%;
 }
+/* review-card */
+.reviews-card-wrap {
+  margin-top: 20px;
+  padding-inline: 40px;
+}
+.review-card-swiper {
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 60px;
+  gap: 18px;
+  cursor: pointer;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  border-radius: 15px;
+}
+.review-card {
+  cursor: pointer;
+  min-width: 632px;
+  margin-right: 40px;
+}
+.review-card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border: 1px solid var(--bg-card-border-dark);
+  border-radius: 20px;
+  flex-direction: column;
+  padding: 40px 40px 0;
+}
+/* top-img */
+.review-card-inner .top-img {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  align-items: center;
+  background: var(--bg-light);
+  border-radius: 50%;
+  justify-content: center;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.3s ease;
+}
+.review-card:hover .top-img {
+  background-color: var(--bg-orange);
+}
+.review-card-inner .top-img img {
+  width: 100%;
+  height: 100%;
+  padding: 1px;
+  max-height: 35px;
+  object-fit: contain;
+  transition: all 0.4s ease;
+}
+.review-card:hover .top-img img {
+  transform: scale(1.1);
+}
+/* text */
+.review-card-inner .text {
+  text-wrap: wrap;
+  color: var(--text-light-secondary);
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 25px;
+  position: relative;
+  line-height: 1.4;
+}
+.review-card-inner .text::before {
+  display: block;
+  content: "";
+  background: url("https://cdn.phenomenonstudio.com/wp-content/themes/phenomenon/img/qu.svg")
+    no-repeat 50%;
+  background-size: contain;
+  width: 32px;
+  height: 24px;
+  margin-bottom: 20px;
+  position: relative;
+}
+/* author */
+.review-card-inner .author {
+  color: var(--text-light);
+  gap: 10px;
+  align-items: center;
+}
+.review-card-inner .author .avatar img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.review-card-inner .author .author-details-wrap h3 {
+  font-size: 16px;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+.review-card-inner .author .author-details-wrap h3:hover {
+  color: var(--bg-orange);
+}
+.review-card-inner .author .author-details-wrap span {
+  font-size: 14px;
+  margin-top: 4px;
+  color: var(--text-light-secondary);
+}
+/* bottom */
+.review-card-inner .bottom {
+  align-items: center;
+  margin-left: -40px;
+  width: calc(100% + 80px);
+  margin-top: 24px;
+  padding: 20px 40px;
+  border-top: 1px solid #404242;
+}
+.review-card-inner .bottom a {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--text-light);
+  margin-right: 25px;
+  transition: all 0.3s ease;
+}
+.review-card-inner .bottom a:hover {
+  color: var(--text-orange);
+}
+.review-card-inner .bottom a img {
+  width: 15px;
+  margin-right: 8px;
+}
+/* CTA section */
+.cta-wrap {
+  margin-top: 148px;
+}
+.cta-button a {
+  width: 100%;
+  height: 336px;
+  color: #fffefd;
+  background: transparent;
+  border: 2px solid #e7f870;
+  border-radius: 170px;
+  font-size: 80px;
+  font-weight: 700;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+.cta-button a::before {
+  content: "";
+  width: 0%;
+  height: 0%;
+  position: absolute;
+  background: #e7f870;
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: 1s;
+  z-index: 1;
+}
+.cta-button:hover a::before {
+  width: 100vw;
+  height: 100vw;
+}
+.cta-button a span {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  top: 50%;
+  padding: 0 50px;
+  transform: translateY(-50%);
+  transition: 0.5s;
+  overflow: hidden;
+  z-index: 2;
+}
+.cta-button:hover a span:first-child {
+  opacity: 0;
+  top: -50%;
+  transform: translateY(-50%);
+}
+.cta-button a span:last-child {
+  bottom: 50%;
+  color: #d9d9d9;
+  /* color: #1f2122; */
+  opacity: 0;
+  top: unset;
+  transform: translateY(100%);
+}
+.cta-button:hover a span:last-child strong {
+  align-items: center;
+  justify-content: center;
+}
+.cta-button:hover a span:last-child {
+  opacity: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  color: var(--text-dark);
+}
+.cta-button a span:last-child i {
+  margin-right: 50px;
+  opacity: 0;
+  position: relative;
+  transform: translateX(-50px);
+  width: 58px;
+  color: var(--bg-dark);
+  transform: rotate(-30deg);
+  transition: all 0.5s ease-in-out;
+}
+.cta-button:hover a span:last-child i {
+  opacity: 1;
+  top: 50%;
+  color: var(--text-dark);
+  transform: rotate(0deg);
+}
 
+/* video section */
+.video-title-wrap .section-title-wrap-span {
+  width: 70%;
+}
+
+/* ==================================================== */
 /* Global Media */
 /* Title Media */
 /* Hero section, services section, work section */
