--- a/Phenomenon-Template/assets/styles/css-page.css
+++ b/Phenomenon-Template/assets/styles/css-page.css
@@ -35,6 +35,7 @@ body {
 
 /* default */
 a {
+  text-wrap: nowrap;
   text-decoration: none;
   color: black;
 }
@@ -55,7 +56,8 @@ ul li a {
 }
 
 section {
-  padding: 120px 0;
+  /* height: 100vh; */
+  padding: 100px 0;
   background-color: var(--bg-light);
 }
 /* quick class */
@@ -116,6 +118,7 @@ section {
 header {
   width: 100%;
   position: relative;
+  padding-inline: 15px;
 }
 .header-wrap {
   padding-top: 30px;
@@ -224,7 +227,7 @@ nav ul li a:hover::after {
 .toggle-nav {
   position: absolute;
   width: 100%;
-  min-width: 495px;
+  /* min-width: 495px; */
   height: auto;
   left: 0;
   top: 80px;
@@ -805,6 +808,12 @@ nav ul li a:hover::after {
   min-width: 632px;
   margin-right: 40px;
 }
+@media (max-width: 768px) {
+  .review-card {
+    min-width: auto;
+    max-width: 100%;
+  }
+}
 .review-card-inner {
   width: 100%;
   height: 100%;
@@ -844,6 +853,7 @@ nav ul li a:hover::after {
 }
 /* text */
 .review-card-inner .text {
+  letter-spacing: 0.5px;
   text-wrap: wrap;
   color: var(--text-light-secondary);
   font-size: 18px;
@@ -890,6 +900,8 @@ nav ul li a:hover::after {
 }
 /* bottom */
 .review-card-inner .bottom {
+  gap: 18px;
+  justify-content: space-evenly;
   align-items: center;
   margin-left: -40px;
   width: calc(100% + 80px);
@@ -897,11 +909,16 @@ nav ul li a:hover::after {
   padding: 20px 40px;
   border-top: 1px solid #404242;
 }
+@media (max-width: 455px) {
+  .review-card-inner .bottom {
+    flex-direction: column;
+  }
+}
 .review-card-inner .bottom a {
   font-size: 14px;
   font-weight: 600;
   color: var(--text-light);
-  margin-right: 25px;
+  /* margin-right: 25px; */
   transition: all 0.3s ease;
 }
 .review-card-inner .bottom a:hover {
@@ -917,12 +934,12 @@ nav ul li a:hover::after {
 }
 .cta-button a {
   width: 100%;
-  height: 336px;
+  height: clamp(123px, 25vw, 336px);
   color: #fffefd;
   background: transparent;
   border: 2px solid #e7f870;
   border-radius: 170px;
-  font-size: 80px;
+  font-size: clamp(28px, 8vw, 80px);
   font-weight: 700;
   overflow: hidden;
   position: relative;
@@ -967,7 +984,6 @@ nav ul li a:hover::after {
 .cta-button a span:last-child {
   bottom: 50%;
   color: #d9d9d9;
-  /* color: #1f2122; */
   opacity: 0;
   top: unset;
   transform: translateY(100%);
@@ -983,7 +999,8 @@ nav ul li a:hover::after {
   color: var(--text-dark);
 }
 .cta-button a span:last-child i {
-  margin-right: 50px;
+  /* margin-right: 50px; */
+  margin-right: clamp(0px, 5vw, 50px);
   opacity: 0;
   position: relative;
   transform: translateX(-50px);
@@ -991,6 +1008,10 @@ nav ul li a:hover::after {
   color: var(--bg-dark);
   transform: rotate(-30deg);
   transition: all 0.5s ease-in-out;
+}
+@media (max-width: 425px) {
+  .cta-button a span:last-child i {
+  }
 }
 .cta-button:hover a span:last-child i {
   opacity: 1;
@@ -1032,6 +1053,11 @@ nav ul li a:hover::after {
     font-size: 24px;
   }
 }
+@media (max-width: 1024px) {
+  .container {
+    padding-inline: 0;
+  }
+}
 @media (max-width: 954px) {
   /* title */
   .hero-title-wrap h1 {
@@ -1063,6 +1089,10 @@ nav ul li a:hover::after {
   .content-wrap a {
     padding: 16px 24px;
   }
+  .hero-tags-wrap {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 @media (max-width: 665px) {
   /* title */
@@ -1085,10 +1115,7 @@ nav ul li a:hover::after {
   .content-wrap a {
     padding: 16px 24px;
   }
-  .hero-tags-wrap {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+
   .tags-wrap {
     margin-top: 8px;
     margin-left: 0;
@@ -1119,6 +1146,9 @@ nav ul li a:hover::after {
   .hero-title-wrap h1 {
     font-size: 25px;
   }
+  .hero-tags-wrap h3 {
+    font-size: 16px;
+  }
   /* other */
   .hero-other-wrap h3 {
     font-size: 18px;
@@ -1126,5 +1156,12 @@ nav ul li a:hover::after {
   /* child section */
   .section-title-wrap-span h2 {
     font-size: 35px;
+  }
+  /* review section */
+  .review-section:after {
+    width: 180px;
+    height: 180px;
+    top: -60px;
+    right: -70px;
   }
 }
